--- a/fb_signup.html
+++ b/fb_signup.html
@@ -1,84 +1,172 @@
 <!DOCTYPE html>
-<html lang="en" >
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Facebook Sign Up</title>
-    <link rel="stylesheet" href="fb.css" />
-  </head>
-  <body class="a13">
-    <h1>facebook</h1>
-    <div class="a12">
-      
-      <label for="aaa">date</label>
-      <select name="date" id="aaa" multiple="">
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign Up for Facebook | Facebook</title>
+  <link rel="stylesheet" href="fb.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon_package_v0.16/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon_package_v0.16/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon_package_v0.16/favicon-16x16.png">
+  <link rel="manifest" href="favicon_package_v0.16/site.webmanifest">
+  <link rel="mask-icon" href="favicon_package_v0.16/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+</head>
+
+<body class="a13">
+  <img src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg " class="image" alt="Facebook">
+  <div class="a12">
+
+
+    </select>
+    <b class="bold">Create a new account</b>
+    <p class="a">It's quick and easy.</p>
+    <hr>
+    <form action="">
+      <input class="firstname" type="text" id="aa" placeholder="First name" required />
+      <label for="aa"></label>
+
+
+
+      <input class="firstname" type="text" id="ab" placeholder="Surname" required />
+      <label for="ab"></label>
+
+      <br /><br />
+      <input type="email" class="email" id="ac" placeholder="Enter your email" required />
+      <label for="ac"></label>
+      <br /><br />
+      <input type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" class="email" id="ad"
+        placeholder="Enter new password" required />
+      <label for="ad"></label>
+      <br /><br />
+      <p class="dob">Date of birth</p>
+      <br />
+      <select class="date" name="" id="">
         <option value="1">1</option>
         <option value="2">2</option>
-
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+        <option value="19">19</option>
+        <option value="20">20</option>
+        <option value="21">21</option>
+        <option value="22">22</option>
+        <option value="23">23</option>
+        <option value="24">24</option>
+        <option value="25">25</option>
+        <option value="26">26</option>
+        <option value="27">27</option>
+        <option value="28">28</option>
+        <option value="29">29</option>
+        <option value="30">30</option>
+        <option value="31">31</option>
       </select>
-        <b class="bold">Create a new account</b>
-        <p class="a">It's quick and easy</p>
 
-        <form action="">
-        <input type="text" id="aa" placeholder="First Name" required />
-        <label for="aa"></label>
+      <select class="month" name="" id="">
+        <option value="Jan">Jan</option>
+        <option value="Feb">Feb</option>
+        <option value="Mar">Mar</option>
+        <option value="Apr">Apr</option>
+        <option value="May">May</option>
+        <option value="Jun">Jun</option>
+        <option value="Jul">Jul</option>
+        <option value="Aug">Aug</option>
+        <option value="Sep">Sep</option>
+        <option value="Oct">Oct</option>
+        <option value="Nov">Nov</option>
+        <option value="Dec">Dec</option>
+      </select>
+
+      <select class="year" name="" id="">
+        <option value="2022">2022</option>
+        <option value="2021">2021</option>
+        <option value="2020">2020</option>
+        <option value="2019">2019</option>
+        <option value="2018">2018</option>
+        <option value="2017">2017</option>
+        <option value="2016">2016</option>
+        <option value="2015">2015</option>
+        <option value="2014">2014</option>
+        <option value="2013">2013</option>
+        <option value="2012">2012</option>
+        <option value="2011">2011</option>
+        <option value="2010">2010</option>
+        <option value="2009">2009</option>
+        <option value="2008">2008</option>
+        <option value="2007">2007</option>
+        <option value="2006">2006</option>
+        <option value="2005">2005</option>
+        <option value="2004">2004</option>
+        <option value="2003">2003</option>
+        <option value="2002">2002</option>
+        <option value="2001">2001</option>
+        <option value="2000">2000</option>
+        <option value="1999">1999</option>
+        <option value="1998">1998</option>
+        <option value="1997">1997</option>
+        <option value="1996">1996</option>
+        <option value="1995">1995</option>
+        <option value="1994">1994</option>
+        <option value="1993">1993</option>
+        <option value="1992">1992</option>
+        <option value="1991">1991</option>
+        <option value="1990">1990</option>
+        <option value="1989">1989</option>
+        <option value="1988">1988</option>
+        <option value="1987">1987</option>
+      </select>
+      <br /><br />
+      <p class="gender">Gender</p>
+      <br />
+      <label class="gen1" for="af">Female</label>
+      <input class="ge1" type="radio" name="gender" id="af" value="Female" />
+
+      <label class="gen2" for="ag">Male</label>
+      <input class="ge2"type="radio" name="gender" id="ag" value="Male" />
+
+      <label class="gen3" for="ah">Custom</label>
+      <input class="ge3"type="radio" name="gender" id="ah" value="Custom" />
 
 
-        <input type="text" id="ab" placeholder="Last Name" required />
-        <label for="ab"></label>
+      <p class="footer">
+        People who use our service may have uploaded your contact information to
+        Facebook.
+        <a href="https://www.facebook.com/reg/help/637205020878504">Learn more.</a>
+        <br><br>
+        By clicking Sign Up, you agree to our
+        <a href="https://www.facebook.com/legal/terms/update" target="_blank">Terms</a>,
+        <a href="https://www.facebook.com/privacy/policy/?entry_point=data_policy_redirect&entry=0"
+          target="_blank">Privacy Policy</a>
+        and
+        <a href="https://www.facebook.com/policies/cookies/" target="_blank">Cookies Policy</a>. You may receive SMS
+        notifications from us and can opt out at any
+        time. Sign Up
+      </p>
 
-        <br /><br />
-        <input type="email" id="ac" placeholder="Enter your email" required />
-        <label for="ac"></label>
-        <br /><br />
-        <input type="password" id="ad" placeholder="Enter new password" required />
-        <label for="ad"></label>
-        <br /><br />
-        Date of birth<br />
-        <input type="date" id="ae" required/>
-        <label for="ae"></label>
-        <br /><br />
-        Gender
-        <br />
-        <input type="radio" name="gender" id="af" value="Female"  />
-        <label for="af">Female</label>
-        <input type="radio" name="gender" id="ag" value="Male" />
-        <label for="ag">Male</label>
-        <input type="radio" name="gender" id="ah" value="Custom" />
-        <label for="ah">Custom</label>
+      <input type="submit" id="submit" value="Sign Up" />
+      <label for="submit"></label>
+      <br /><br />
+      <a class="acc" class="no2" 
+        href="https://www.facebook.com/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNjYxNTMxMjA4LCJjYWxsc2l0ZV9pZCI6MjY5NTQ4NDUzMDcyMDk1MX0%3D">Already
+        have an account??</a>
+    </form>
+  </div>
+</body>
 
-        <p>
-            People who use our service may have uploaded your contact information to
-            Facebook.
-            <a href="https://www.facebook.com/reg/help/637205020878504"
-            >Learn more.</a
-            >
-            By clicking Sign Up, you agree to our
-            <a href="https://www.facebook.com/legal/terms/update" target="_blank"
-            >Terms</a
-            >,
-            <a
-            href="https://www.facebook.com/privacy/policy/?entry_point=data_policy_redirect&entry=0"
-            target="_blank"
-            >Privacy Policy</a
-            >
-            and
-            <a href="https://www.facebook.com/policies/cookies/" target="_blank"
-            >Cookies Policy</a
-            >. You may receive SMS notifications from us and can opt out at any
-            time. Sign Up
-        </p>
-
-        <input type="submit" id="submit" value="Sign Up" />
-        <label for="submit"></label>
-        <br /><br />
-        <a
-            class="no2"
-            href="https://www.facebook.com/login/?privacy_mutation_token=eyJ0eXBlIjowLCJjcmVhdGlvbl90aW1lIjoxNjYxNTMxMjA4LCJjYWxsc2l0ZV9pZCI6MjY5NTQ4NDUzMDcyMDk1MX0%3D"
-            >Already have an account??</a
-        >
-        </form>
-    </div>
-  </body>
 </html>
